; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/ath/ath_hal/ar9300/extr_ar9300_spectral.c_ar9300_set_radar_dc_thresh.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/ath/ath_hal/ar9300/extr_ar9300_spectral.c_ar9300_set_radar_dc_thresh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }

@AR_PHY_RADAR_EXT = common dso_local global i32 0, align 4
@AR_PHY_RADAR_DC_PWR_THRESH = common dso_local global i32 0, align 4
@MAX_RADAR_DC_PWR_THRESH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ar9300_set_radar_dc_thresh(%struct.ath_hal* %0) #0 {
  %2 = alloca %struct.ath_hal*, align 8
  %3 = alloca i32, align 4
  store %struct.ath_hal* %0, %struct.ath_hal** %2, align 8
  %4 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %5 = load i32, i32* @AR_PHY_RADAR_EXT, align 4
  %6 = call i32 @OS_REG_READ(%struct.ath_hal* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @AR_PHY_RADAR_DC_PWR_THRESH, align 4
  %8 = xor i32 %7, -1
  %9 = load i32, i32* %3, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @MAX_RADAR_DC_PWR_THRESH, align 4
  %12 = load i32, i32* @AR_PHY_RADAR_DC_PWR_THRESH, align 4
  %13 = call i32 @SM(i32 %11, i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %17 = load i32, i32* @AR_PHY_RADAR_EXT, align 4
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @OS_REG_WRITE(%struct.ath_hal* %16, i32 %17, i32 %18)
  %20 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %21 = load i32, i32* @AR_PHY_RADAR_EXT, align 4
  %22 = call i32 @OS_REG_READ(%struct.ath_hal* %20, i32 %21)
  store i32 %22, i32* %3, align 4
  ret void
}

declare dso_local i32 @OS_REG_READ(%struct.ath_hal*, i32) #1

declare dso_local i32 @SM(i32, i32) #1

declare dso_local i32 @OS_REG_WRITE(%struct.ath_hal*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
